[gd_scene load_steps=39 format=3 uid="uid://dkaek8pvyl2xs"]

[ext_resource type="Script" path="res://BattleManager.gd" id="1_1t254"]
[ext_resource type="Script" path="res://Team.gd" id="1_60wg8"]
[ext_resource type="Script" path="res://PlayerInputHandler.gd" id="2_c64ty"]
[ext_resource type="Script" path="res://PlayerControlledEntity.gd" id="3_n6bvo"]
[ext_resource type="Resource" uid="uid://bj4v5hf4g7vna" path="res://Actions/UpAction.tres" id="4_83udu"]
[ext_resource type="Script" path="res://RootPlayerInputState.gd" id="4_jdolt"]
[ext_resource type="Script" path="res://AIControlledEntity.gd" id="4_lkebv"]
[ext_resource type="Script" path="res://ComboPlayerInputState.gd" id="4_t7sth"]
[ext_resource type="Resource" uid="uid://01dqado1b6jh" path="res://Actions/DownAction.tres" id="5_0fxqc"]
[ext_resource type="Script" path="res://TargettingPlayerInputState.gd" id="5_d6kq4"]
[ext_resource type="Script" path="res://BattleUIManager.gd" id="5_jmv5p"]
[ext_resource type="Script" path="res://StateMachine.gd" id="6_87lep"]
[ext_resource type="Resource" uid="uid://dmnlucxnrfh2f" path="res://Actions/LeftAction.tres" id="6_ljfqr"]
[ext_resource type="Script" path="res://PlayerTurnUIState.gd" id="7_b8t82"]
[ext_resource type="Resource" uid="uid://dn0p84udbmtxm" path="res://Actions/RightAction.tres" id="7_l1ucp"]
[ext_resource type="Resource" uid="uid://djn58vvb68l0x" path="res://entityData/testGuy1.tres" id="8_jn6cu"]
[ext_resource type="Script" path="res://ProcessingPlayerTurnUIState.gd" id="8_tfvna"]
[ext_resource type="Resource" uid="uid://ckdkaq0l06csq" path="res://entityData/testGuy2.tres" id="9_1pghg"]
[ext_resource type="Script" path="res://EnemyTurnUIState.gd" id="9_yn4p8"]
[ext_resource type="Resource" uid="uid://cn04ay78nvegb" path="res://entityData/testGuy3.tres" id="10_5bj8p"]
[ext_resource type="Script" path="res://ActionRadial.gd" id="11_0g03e"]
[ext_resource type="Resource" uid="uid://cdqtpiloj1cgu" path="res://entityData/testGuy4.tres" id="12_1k7p1"]
[ext_resource type="Script" path="res://EnemyActionDisplay.gd" id="12_cgrrv"]
[ext_resource type="Script" path="res://ComboDisplay.gd" id="12_ejswd"]
[ext_resource type="Resource" uid="uid://c6vpes2cepqjr" path="res://entityData/testGuy5.tres" id="13_qf7tk"]
[ext_resource type="Texture2D" uid="uid://c225rmm16i8va" path="res://testIcon1.png" id="14_2cfoi"]
[ext_resource type="Script" path="res://Actions/PartyDisplay.gd" id="14_6plnp"]
[ext_resource type="Resource" uid="uid://dos4vj7bl2n4p" path="res://entityData/testGuy6.tres" id="14_w3kva"]
[ext_resource type="PackedScene" uid="uid://celmkcso8kpdd" path="res://entity_display.tscn" id="15_r76id"]
[ext_resource type="PackedScene" uid="uid://cqsymm8sn1ubb" path="res://Actions/action_view.tscn" id="16_yq0pa"]
[ext_resource type="Script" path="res://TurnOrderDisplay.gd" id="26_enp32"]
[ext_resource type="PackedScene" uid="uid://b4ws34qh8i5oo" path="res://entity_icon.tscn" id="27_rpp4b"]
[ext_resource type="Texture2D" uid="uid://ckhopy6w546ke" path="res://arrowUp.png" id="32_fpt2a"]
[ext_resource type="Texture2D" uid="uid://dg3bpgaac2yrw" path="res://arrowRight.png" id="33_b8tdo"]
[ext_resource type="Texture2D" uid="uid://j6dl1aq3l1j4" path="res://arrowDown.png" id="34_41fwc"]
[ext_resource type="Texture2D" uid="uid://bua87n0iugquw" path="res://arrowLeft.png" id="35_r6gtd"]
[ext_resource type="Script" path="res://EntitysDisplay.gd" id="36_y080k"]
[ext_resource type="Script" path="res://EntityIconDisplay.gd" id="38_yaa7m"]

[node name="Main" type="Node"]
metadata/_edit_vertical_guides_ = []

[node name="BattleManager" type="Node" parent="."]
script = ExtResource("1_1t254")

[node name="PlayerInputHandler" type="Node" parent="BattleManager"]
script = ExtResource("2_c64ty")

[node name="StateMachine" type="Node" parent="BattleManager/PlayerInputHandler"]
script = ExtResource("6_87lep")
autostart = false

[node name="RootPlayerInputState" type="Node" parent="BattleManager/PlayerInputHandler/StateMachine"]
script = ExtResource("4_jdolt")

[node name="ComboPlayerInputState" type="Node" parent="BattleManager/PlayerInputHandler/StateMachine"]
script = ExtResource("4_t7sth")

[node name="TargettingPlayerInputState" type="Node" parent="BattleManager/PlayerInputHandler/StateMachine" node_paths=PackedStringArray("targetTeam")]
script = ExtResource("5_d6kq4")
targetTeam = NodePath("../../../Team2")

[node name="Team1" type="Node" parent="BattleManager" node_paths=PackedStringArray("enemyTeam", "entitysDisplay")]
script = ExtResource("1_60wg8")
enemyTeam = NodePath("../Team2")
entitysDisplay = NodePath("../UI/EntitysDisplay")

[node name="Player1Slot" type="Node" parent="BattleManager/Team1"]
script = ExtResource("3_n6bvo")
upAction = ExtResource("4_83udu")
downAction = ExtResource("5_0fxqc")
leftAction = ExtResource("6_ljfqr")
rightAction = ExtResource("7_l1ucp")
entityData = ExtResource("8_jn6cu")

[node name="Player2Slot" type="Node" parent="BattleManager/Team1"]
script = ExtResource("3_n6bvo")
upAction = ExtResource("4_83udu")
downAction = ExtResource("5_0fxqc")
leftAction = ExtResource("6_ljfqr")
rightAction = ExtResource("7_l1ucp")
entityData = ExtResource("9_1pghg")

[node name="Player3Slot" type="Node" parent="BattleManager/Team1"]
script = ExtResource("3_n6bvo")
upAction = ExtResource("4_83udu")
downAction = ExtResource("5_0fxqc")
leftAction = ExtResource("6_ljfqr")
rightAction = ExtResource("7_l1ucp")
entityData = ExtResource("10_5bj8p")

[node name="Team2" type="Node" parent="BattleManager" node_paths=PackedStringArray("enemyTeam", "entitysDisplay")]
script = ExtResource("1_60wg8")
enemyTeam = NodePath("../Team1")
entitysDisplay = NodePath("../UI/EntitysDisplay2")

[node name="Enemy1Slot" type="Node" parent="BattleManager/Team2"]
script = ExtResource("4_lkebv")
actions = Array[Resource("res://Action.gd")]([ExtResource("4_83udu")])
entityData = ExtResource("12_1k7p1")

[node name="Enemy2Slot" type="Node" parent="BattleManager/Team2"]
script = ExtResource("4_lkebv")
actions = Array[Resource("res://Action.gd")]([ExtResource("4_83udu")])
entityData = ExtResource("13_qf7tk")

[node name="Enemy3Slot" type="Node" parent="BattleManager/Team2"]
script = ExtResource("4_lkebv")
actions = Array[Resource("res://Action.gd")]([ExtResource("5_0fxqc")])
entityData = ExtResource("14_w3kva")

[node name="UI" type="Control" parent="BattleManager"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_jmv5p")

[node name="StateMachine" type="Node" parent="BattleManager/UI"]
script = ExtResource("6_87lep")
autostart = false

[node name="PlayerTurn" type="Node" parent="BattleManager/UI/StateMachine" node_paths=PackedStringArray("playerTurnRootDisplay", "actionRadial", "comboDisplay")]
script = ExtResource("7_b8t82")
playerTurnRootDisplay = NodePath("../../PlayerTurnRootDisplay")
actionRadial = NodePath("../../ActionRadial")
comboDisplay = NodePath("../../ComboDisplay")

[node name="ProcessingPlayerTurn" type="Node" parent="BattleManager/UI/StateMachine" node_paths=PackedStringArray("comboDisplay")]
script = ExtResource("8_tfvna")
comboDisplay = NodePath("../../ComboDisplay")

[node name="DebugTimer" type="Timer" parent="BattleManager/UI/StateMachine/ProcessingPlayerTurn"]
one_shot = true

[node name="EnemyTurn" type="Node" parent="BattleManager/UI/StateMachine" node_paths=PackedStringArray("enemyActionDisplay")]
script = ExtResource("9_yn4p8")
enemyActionDisplay = NodePath("../../EnemyActionDisplay")

[node name="Timer" type="Timer" parent="BattleManager/UI/StateMachine/EnemyTurn"]
wait_time = 2.0
one_shot = true

[node name="PartyDisplay" type="Control" parent="BattleManager/UI" node_paths=PackedStringArray("team")]
layout_mode = 1
anchor_top = 0.75
anchor_right = 0.25
anchor_bottom = 1.0
grow_vertical = 0
script = ExtResource("14_6plnp")
team = NodePath("../../Team1")
entityDisplayPackedScene = ExtResource("15_r76id")

[node name="ColorRect" type="ColorRect" parent="BattleManager/UI/PartyDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.470588, 0.701961, 0.619608, 0.733333)

[node name="VBoxContainer" type="VBoxContainer" parent="BattleManager/UI/PartyDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ComboDisplay" type="Control" parent="BattleManager/UI"]
visible = false
layout_mode = 1
anchor_left = 0.25
anchor_top = 0.85
anchor_right = 0.75
anchor_bottom = 1.0
offset_left = 0.544
offset_top = -0.280029
offset_right = -0.264038
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("12_ejswd")
actionViewScene = ExtResource("16_yq0pa")

[node name="ColorRect" type="ColorRect" parent="BattleManager/UI/ComboDisplay"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.005
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.195
grow_horizontal = 2
grow_vertical = 2
color = Color(0.447059, 0.447059, 0.447059, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="BattleManager/UI/ComboDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EnemyDisplay" type="Control" parent="BattleManager/UI" node_paths=PackedStringArray("team")]
layout_mode = 1
anchor_left = 0.75
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("14_6plnp")
team = NodePath("../../Team2")
entityDisplayPackedScene = ExtResource("15_r76id")

[node name="ColorRect" type="ColorRect" parent="BattleManager/UI/EnemyDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.478431, 0.529412, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="BattleManager/UI/EnemyDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ActionRadial" type="Control" parent="BattleManager/UI"]
visible = false
layout_mode = 1
anchor_left = 0.349
anchor_top = 0.1
anchor_right = 0.651
anchor_bottom = 0.637
offset_left = -0.0480042
offset_top = 0.199997
offset_right = 0.0479736
offset_bottom = 0.223999
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11_0g03e")

[node name="ColorRect" type="ColorRect" parent="BattleManager/UI/ActionRadial"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0862745, 0.294118, 0.294118, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="BattleManager/UI/ActionRadial"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="UpAction" parent="BattleManager/UI/ActionRadial/VBoxContainer" instance=ExtResource("16_yq0pa")]
layout_mode = 2

[node name="RightAction" parent="BattleManager/UI/ActionRadial/VBoxContainer" instance=ExtResource("16_yq0pa")]
layout_mode = 2

[node name="DownAction" parent="BattleManager/UI/ActionRadial/VBoxContainer" instance=ExtResource("16_yq0pa")]
layout_mode = 2

[node name="LeftAction" parent="BattleManager/UI/ActionRadial/VBoxContainer" instance=ExtResource("16_yq0pa")]
layout_mode = 2

[node name="EnemyActionDisplay" type="Control" parent="BattleManager/UI"]
visible = false
layout_mode = 1
anchor_left = 0.349
anchor_top = 0.1
anchor_right = 0.651
anchor_bottom = 0.637
offset_left = -0.0480042
offset_top = 0.199997
offset_right = 0.0479736
offset_bottom = 0.223999
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("12_cgrrv")

[node name="ActionName" type="RichTextLabel" parent="BattleManager/UI/EnemyActionDisplay"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]bingus????"
fit_content = true
autowrap_mode = 0

[node name="ColorRect" type="ColorRect" parent="BattleManager/UI/EnemyActionDisplay/ActionName"]
show_behind_parent = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.423529, 0.494118, 1)

[node name="TurnOrderDisplay" type="Control" parent="BattleManager/UI"]
layout_mode = 1
anchor_right = 0.299
anchor_bottom = 0.131
offset_right = 0.551971
offset_bottom = 0.111992
script = ExtResource("26_enp32")
entityIcon = ExtResource("27_rpp4b")

[node name="HBoxContainer" type="HBoxContainer" parent="BattleManager/UI/TurnOrderDisplay"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.471
offset_bottom = -0.0349998
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerTurnRootDisplay" type="Control" parent="BattleManager/UI"]
visible = false
layout_mode = 1
anchor_left = 0.357
anchor_top = 0.225
anchor_right = 0.643
anchor_bottom = 0.775
offset_left = -0.264027
offset_top = -0.300006
offset_right = 0.263992
offset_bottom = 0.299977
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="BattleManager/UI/PlayerTurnRootDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.141176, 0.415686, 0.607843, 0.564706)

[node name="VBoxContainer" type="VBoxContainer" parent="BattleManager/UI/PlayerTurnRootDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BattleManager/UI/PlayerTurnRootDisplay/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="BattleManager/UI/PlayerTurnRootDisplay/VBoxContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("32_fpt2a")

[node name="RichTextLabel" type="RichTextLabel" parent="BattleManager/UI/PlayerTurnRootDisplay/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
bbcode_enabled = true
text = "[center] Attack"
fit_content = true

[node name="HBoxContainer2" type="HBoxContainer" parent="BattleManager/UI/PlayerTurnRootDisplay/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="BattleManager/UI/PlayerTurnRootDisplay/VBoxContainer/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("33_b8tdo")

[node name="RichTextLabel" type="RichTextLabel" parent="BattleManager/UI/PlayerTurnRootDisplay/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
bbcode_enabled = true
text = "[center] Item"
fit_content = true

[node name="HBoxContainer3" type="HBoxContainer" parent="BattleManager/UI/PlayerTurnRootDisplay/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="BattleManager/UI/PlayerTurnRootDisplay/VBoxContainer/HBoxContainer3"]
layout_mode = 2
texture = ExtResource("34_41fwc")

[node name="RichTextLabel" type="RichTextLabel" parent="BattleManager/UI/PlayerTurnRootDisplay/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
bbcode_enabled = true
text = "[center] Spell"
fit_content = true

[node name="HBoxContainer4" type="HBoxContainer" parent="BattleManager/UI/PlayerTurnRootDisplay/VBoxContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="BattleManager/UI/PlayerTurnRootDisplay/VBoxContainer/HBoxContainer4"]
layout_mode = 2
texture = ExtResource("35_r6gtd")

[node name="RichTextLabel" type="RichTextLabel" parent="BattleManager/UI/PlayerTurnRootDisplay/VBoxContainer/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
bbcode_enabled = true
text = "[center] Swap Party"
fit_content = true

[node name="EntitysDisplay" type="Control" parent="BattleManager/UI"]
layout_mode = 1
anchor_top = 0.19
anchor_bottom = 0.19
offset_top = -0.12001
offset_right = 282.0
offset_bottom = 337.88
script = ExtResource("36_y080k")

[node name="VBoxContainer" type="VBoxContainer" parent="BattleManager/UI/EntitysDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
alignment = 1

[node name="TextureRect" type="TextureRect" parent="BattleManager/UI/EntitysDisplay/VBoxContainer"]
custom_minimum_size = Vector2(84, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("14_2cfoi")
expand_mode = 5
script = ExtResource("38_yaa7m")

[node name="SelectionArrow" type="TextureRect" parent="BattleManager/UI/EntitysDisplay/VBoxContainer/TextureRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 59.0
offset_top = -41.0
offset_right = 123.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("35_r6gtd")

[node name="TextureRect2" type="TextureRect" parent="BattleManager/UI/EntitysDisplay/VBoxContainer"]
custom_minimum_size = Vector2(84, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("14_2cfoi")
expand_mode = 5
script = ExtResource("38_yaa7m")

[node name="SelectionArrow" type="TextureRect" parent="BattleManager/UI/EntitysDisplay/VBoxContainer/TextureRect2"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 59.0
offset_top = -41.0
offset_right = 123.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("35_r6gtd")

[node name="TextureRect3" type="TextureRect" parent="BattleManager/UI/EntitysDisplay/VBoxContainer"]
custom_minimum_size = Vector2(84, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("14_2cfoi")
expand_mode = 5
script = ExtResource("38_yaa7m")

[node name="SelectionArrow" type="TextureRect" parent="BattleManager/UI/EntitysDisplay/VBoxContainer/TextureRect3"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 59.0
offset_top = -41.0
offset_right = 123.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("35_r6gtd")

[node name="EntitysDisplay2" type="Control" parent="BattleManager/UI"]
layout_mode = 1
anchor_left = 1.0
anchor_top = 0.19
anchor_right = 1.0
anchor_bottom = 0.19
offset_left = -280.0
offset_top = -0.12001
offset_right = 2.0
offset_bottom = 337.88
script = ExtResource("36_y080k")

[node name="VBoxContainer" type="VBoxContainer" parent="BattleManager/UI/EntitysDisplay2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
alignment = 1

[node name="TextureRect" type="TextureRect" parent="BattleManager/UI/EntitysDisplay2/VBoxContainer"]
custom_minimum_size = Vector2(84, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("14_2cfoi")
expand_mode = 5
script = ExtResource("38_yaa7m")

[node name="SelectionArrow" type="TextureRect" parent="BattleManager/UI/EntitysDisplay2/VBoxContainer/TextureRect"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.0
offset_top = -41.0
offset_right = -52.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("33_b8tdo")

[node name="TextureRect2" type="TextureRect" parent="BattleManager/UI/EntitysDisplay2/VBoxContainer"]
custom_minimum_size = Vector2(84, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("14_2cfoi")
expand_mode = 5
script = ExtResource("38_yaa7m")

[node name="SelectionArrow" type="TextureRect" parent="BattleManager/UI/EntitysDisplay2/VBoxContainer/TextureRect2"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.0
offset_top = -41.0
offset_right = -52.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("33_b8tdo")

[node name="TextureRect3" type="TextureRect" parent="BattleManager/UI/EntitysDisplay2/VBoxContainer"]
custom_minimum_size = Vector2(84, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("14_2cfoi")
expand_mode = 5
script = ExtResource("38_yaa7m")

[node name="SelectionArrow" type="TextureRect" parent="BattleManager/UI/EntitysDisplay2/VBoxContainer/TextureRect3"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.0
offset_top = -41.0
offset_right = -52.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("33_b8tdo")
